RWA-3813 Fix code smells